Dont throw when nodeRequire from Browser
The pattern `AWS.util.nodeRequire('foo').bar` is troublesome indeed. If
—for whatever reason— one ends up calling this from the client, it will
brutally panic. This can be a major problem for some bundle system and
transpilers, and can the complile to fail.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "homepage": "https://github.com/grimurjonsson/aws-sdk-js",
     "contributors": [
       "Grimur Jonsson <grimur@jonsson.is>",
+      "runarberg <runarberg@zoho.com>",
       "Skossi <thorsteinng@greenqloud.com>"
     ],
     "devDependencies": {
